# Dji-mic-mini-2-control

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md  build-release.ps1  build-release.sh  deny.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/device/: Cargo.toml
crates/device/src/: actor.rs  error.rs  lib.rs  manager.rs  platform.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: crc.rs  lib.rs  packet.rs  settings.rs  state.rs
crates/protocol/src/models/: mic_mini.rs  mod.rs
gui/: index.html  package-lock.json  package.json  vite.config.js
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: audio.rs  comfort.rs  commands.rs  main.rs
gui/src/assets/devices/: README.md
gui/src/lib/: AudioRouting.svelte  BatteryIcon.svelte  DevicePanel.svelte  DevicePicto.svelte  NoiseCancelControl.svelte  SettingControl.svelte  Sidebar.svelte  TxArtwork.svelte  TxCoverPicker.svelte  TxFlipControl.svelte  UdevModal.svelte  VoiceComfort.svelte  api.js  txCovers.js
native/voice-comfort-engine/: CMakeLists.txt
native/voice-comfort-engine/Source/: EngineMain.cpp  ReceiverShortcut.cpp  ReceiverShortcut.h  SystemAudioRouter.cpp  SystemAudioRouter.h  VoiceComfortDSP.cpp  VoiceComfortDSP.h
packaging/: 60-dji-mic.rules  postinstall.sh  postremove.sh
tools/: generate_tray_icon.swift
