[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/device",
    "crates/cli",
    "gui/src-tauri",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Unlicense"
rust-version = "1.81"

[workspace.dependencies]
protocol = { path = "crates/protocol" }
device = { path = "crates/device" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
nusb = "0.1"
futures-lite = "2"
async-channel = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = "thin"
