[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line control for DJI wireless microphones."

[[bin]]
name = "djimic"
path = "src/main.rs"

[dependencies]
device = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
