[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Framing, CRC, command building and heartbeat decoding for DJI wireless microphones."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
